// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox Confirm - Cancel 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Confirm - Cancel
  </span>
</ui5-dialog>
`;

exports[`MessageBox Confirm - OK 1`] = `
<ui5-dialog
  header-text=""
  open="true"
  opened=""
>
  <header
    class="MessageBox--header-"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Confirm - OK
  </span>
</ui5-dialog>
`;

exports[`MessageBox Error 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Error"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-error"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Error
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="Close"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      Close
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Error
  </span>
</ui5-dialog>
`;

exports[`MessageBox Information 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Information"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-information"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Information
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Information
  </span>
</ui5-dialog>
`;

exports[`MessageBox No Title 1`] = `
<ui5-dialog
  header-text=""
  open="true"
  opened=""
>
  <header
    class="MessageBox--header-"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    No Title
  </span>
</ui5-dialog>
`;

exports[`MessageBox Not open 1`] = `
<ui5-dialog
  header-text=""
  open="false"
>
  <header
    class="MessageBox--header-"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom Success
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Custom Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Show 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="Yes"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      Yes
    </ui5-button>
    <ui5-button
      data-action="No"
      design="Transparent"
      style="min-width: 4rem;"
    >
      No
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Custom
  </span>
</ui5-dialog>
`;

exports[`MessageBox Success 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Success
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Success w/ custom title 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom Success
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Custom Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Warning 1`] = `
<ui5-dialog
  header-text=""
  open="true"
>
  <header
    class="MessageBox--header-"
    data-type="Warning"
    slot="header"
  >
    <div
      class="MessageBox--icon-"
    >
      <ui5-icon
        name="message-warning"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Warning
    </ui5-title>
  </header>
  <footer
    class="MessageBox--footer-"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <span
    class="Text--text- MessageBox--content-"
  >
    Warning
  </span>
</ui5-dialog>
`;
